# OpenModelica

./: .gitmodules  CMakeLists.txt  Jenkinsfile  OSMC-USAGE-MODE.txt  README.md  flake.nix
.CI/: Jenkinsfile.cpp  Jenkinsfile.debug.symbols  Jenkinsfile.more-compilers  Jenkinsfile.osx  Jenkinsfile.static_analysis  common.groovy
.CI/cmake/: Jenkinsfile.cmake.macos.gcc  Jenkinsfile.cmake.omdev.gcc  Jenkinsfile.cmake.ubuntu.gcc.test
.CI/scripts/: SimulationRuntime-license-exceptions.txt
.devcontainer/: README.md
.devcontainer/build-deps-almalinux-10/: Dockerfile  devcontainer.json
.devcontainer/build-deps-alpine-3.24/: Dockerfile  devcontainer.json
.devcontainer/build-deps-fedora-43/: Dockerfile  devcontainer.json
.devcontainer/build-deps-fedora-44/: Dockerfile  devcontainer.json
.github/workflows/: nix.yaml
OMCompiler/Compiler/.cmake/: rust_omc.cmake  rust_src_files.txt
OMCompiler/Compiler/BackEnd/: BackendDAEUtil.mo  SymbolicJacobian.mo
OMCompiler/Compiler/FrontEnd/: ModelicaBuiltin.mo
OMCompiler/Compiler/Main/: Main.mo
OMCompiler/Compiler/NBackEnd/Classes/: NBEquation.mo  NBStrongComponent.mo  NBackendDAE.mo
OMCompiler/Compiler/NBackEnd/Util/: NBAdjacency.mo  NBBackendUtil.mo  NBDifferentiate.mo  NBReplacements.mo  NBSlice.mo
OMCompiler/Compiler/NFFrontEnd/: NFConnector.mo  NFExpandableConnectors.mo  NFInst.mo  NFModelicaBuiltin.mo  NFPrefixes.mo  NFStreamFlowAlias.mo
OMCompiler/Compiler/NSimCode/: NSimStrongComponent.mo
OMCompiler/Compiler/OpenModelica.rs/: Cargo.toml  rust-toolchain.toml
OMCompiler/Compiler/OpenModelica.rs/daskr/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/daskr/src/: auxiliary.rs  lib.rs  linpack.rs  solver.rs
OMCompiler/Compiler/OpenModelica.rs/libopenmodelica_compiler/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/metamodelica/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/omshell_omc/: omc_worker.js
OMCompiler/Compiler/OpenModelica.rs/openmodelica_ast/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_ast_collections/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_backend/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_backend_main/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_backend_tools/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_backend_types/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_backend_util/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_codegen/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_codegen_c/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_codegen_cfunctions/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_codegen_cpp/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_codegen_cpp_common/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_codegen_cpp_ext/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_codegen_cpp_omsi/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_codegen_cpp_omsi_ext/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_codegen_fmu/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_codegen_fmu_c/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_codegen_fmu_omsi/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_codegen_graphml/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_codegen_wasm_jit/: Cargo.toml  build.rs
OMCompiler/Compiler/OpenModelica.rs/openmodelica_codegen_wasm_jit/src/: CodegenWasmJit.rs  CodegenWasmJitFunctions.rs
OMCompiler/Compiler/OpenModelica.rs/openmodelica_codegen_wasm_jit/src/CodegenWasmJit/: sim_driver.rs  sim_runtime_stub.rs  sim_runtime_wasmer.rs  sim_runtime_wasmtime.rs  wasi_shim.rs
OMCompiler/Compiler/OpenModelica.rs/openmodelica_codegen_wasm_jit/src/CodegenWasmJitFunctions/: runtime_stub.rs  runtime_wasmer.rs  runtime_wasmtime.rs  sim_systems.rs
OMCompiler/Compiler/OpenModelica.rs/openmodelica_fmi3_wasm/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_fmi3_wasm/src/: lib.rs
OMCompiler/Compiler/OpenModelica.rs/openmodelica_fmi3_wasm/wit/: fmi3-callbacks.wit  fmi3-co-simulation.wit  fmi3-common.wit  fmi3-model-exchange.wit  fmi3-scheduled-execution.wit  fmi3-types.wit  world.wit
OMCompiler/Compiler/OpenModelica.rs/openmodelica_sim_meta/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_sim_meta/src/: driver.rs  lib.rs
OMCompiler/Compiler/OpenModelica.rs/wasm/: index.html  plot.js  (+1 more)
OMCompiler/Compiler/Script/: CevalScriptBackend.mo
OMCompiler/Compiler/SimCode/: SerializeModelInfo.mo  SimCode.mo  SimCodeFunctionUtil.mo  SimCodeMain.mo  SimCodeUtil.mo
OMCompiler/Compiler/Stubs/: CevalScriptBackend.mo
OMCompiler/Compiler/Template/: CodegenC.tpl  CodegenFMU3.tpl  CodegenWasmJit.mo  SimCodeTV.mo
OMCompiler/Compiler/Util/: Autoconf.mo.omdev.mingw  Error.mo  Flags.mo  FlagsUtil.mo  System.mo
OMCompiler/Compiler/boot/: Makefile.omdev.mingw
OMCompiler/Compiler/runtime/: Makefile.omdev.mingw  System_omc.c  lapackimpl.c  rt_ldflags_generated_code.cmake  systemimpl.c
OMCompiler/Compiler/scripts/: ngspicetoModelica.py
OMCompiler/Examples/: ConvertBuildingsReferenceToCSV.py
OMEdit/OMEditGUI/: main.cpp
OMEdit/OMEditLIB/: MainWindow.cpp  MainWindow.h
OMEdit/OMEditLIB/OMC/: OMCProxy.cpp  OMCProxy.h
OMEdit/OMEditLIB/Plotting/: VariablesWidget.cpp
OMEdit/OMEditLIB/Simulation/: SimulationOutputWidget.cpp  SimulationOutputWidget.h
OMShell/mosh/src/: mosh.cpp
libraries/: index.json  index.mos  update.py
nix/: package.nix
testsuite/: Makefile  rust-ignore-tests.txt
testsuite/omsimulator/: Issue14456.mos  Makefile  Modelica.Mechanics.MultiBody.Examples.Elementary.Pendulum.mos  cmakeFMU.mos  experimentAnnotation.mos  recompileFMU.mos  setStartTime.mos  sinus.mos  terminateTest.mos  testLoopsOverFMUs.mos  testSynchronousFMU_01.mos  testSynchronousFMU_02.mos  whenTest.mos
testsuite/openmodelica/basemodelica/: FlowAlias13.mos  Makefile
testsuite/partest/: runtests.pl
testsuite/sanity-check/: runSanity.sh
(+195 files in other folders)
