[package]
name = "openmodelica_codegen_wasm_jit"
version = "0.1.0"
edition = "2024"

[dependencies]
openmodelica_wasi.workspace = true
openmodelica_mat_writer.workspace = true
openmodelica_sim_meta.workspace = true
metamodelica.workspace = true
openmodelica_ast.workspace = true
openmodelica_simcode_types.workspace = true
# SimCodeUtil::getFMI3ValueReference: the FMU export's value references must be
# the ones CodegenFMU3 puts in modelDescription.xml.
openmodelica_backend.workspace = true
openmodelica_backend_types.workspace = true
openmodelica_error.workspace = true
openmodelica_frontend_types.workspace = true
openmodelica_frontend_dump.workspace = true
openmodelica_util.workspace = true
arcstr.workspace = true
ordered-float.workspace = true
# `wasmparser` feature enables wasm-encoder's `reencode` (model→dylink transform).
wasm-encoder = { workspace = true, features = ["wasmparser"] }
# FMI3 wasm export: transform the model kernel module to a dylink side module
# (wasm-encoder reencode) and link it with the embedded adapter into an fmi-ls-wasm
# component via wit_component::Linker. Pure Rust → works in the browser omc too
# (no external wasm-merge). wasmparser reads the model for the reencode. Pinned to
# the same 0.252 wasm-tools release as wasm-encoder to avoid type skew.
wit-component = "0.252"
wasmparser = "0.252"
# Native DAE solver for the wasm-jit DASSL driver; only used when the engine is
# built in (the `jit` feature).
daskr = { path = "../daskr", optional = true }

[features]
# The in-process wasm JIT engine (function eval for `-d=gen`, and the wasm-jit
# simulation target). Default on. Built without it, the crate still *emits* wasm
# modules but cannot execute them (the entry points report the engine absent),
# and neither wasmtime nor wasmer is pulled in.
default = ["jit"]
# `jit` pulls the native default engine (wasmtime); on wasm32 the wasmtime dep
# is target-absent and wasmer-js is used instead (requires `engine-wasmer`).
jit = ["dep:daskr", "dep:wasmtime"]
# Select wasmer instead of the default wasmtime: natively for benchmarking
# (wasmer then wins over wasmtime), and mandatorily on wasm32 (its `js` backend
# is the only engine that builds for wasm).
engine-wasmer = ["jit", "dep:wasmer"]

# wasmtime is native-only (no wasm32 build); the wasm target ignores
# engine-wasmtime and always uses wasmer-js.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = { workspace = true, optional = true }
wasmer = { workspace = true, features = ["sys", "cranelift"], optional = true }
# Native external "C" calls from the wasmtime sim host: general (mixed
# f64/i32) scalar signatures need libffi, since a runtime-determined arg-kind
# mix can't be expressed as a fixed transmute under the C ABI. Native-only
# (bundled C sources); the wasm sim host has no external-C path.
libffi.workspace = true
# Our own ModelicaAllocateString (arena-backed) for string-returning externals;
# the trampoline brackets each call with its sim_external_begin/end.
openmodelica_modelica_utilities.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
# `wasm-types-polyfill` is required: the JS `WebAssembly` API does not expose a
# function's parameter/result types, so without the polyfill every exported
# function reports an empty `[]->[]` signature and `get_typed_function` fails
# with `ExportError::IncompatibleType`. It ships in wasmer's `js-default` but not
# bare `js`, so request it explicitly.
wasmer = { workspace = true, features = ["js", "wasm-types-polyfill"], optional = true }
