# Per-model simulation metadata AND the single engine-independent simulation
# driver, shared between the wasm-jit codegen (host, native + wasmer) and the
# in-wasm runtime (compiled into `runtime.wasm` so the model's functionODE etc.
# are called wasm->wasm). `no_std` + `alloc` by default (`std` feature, default
# on, adds the host conveniences: `Instant` clock fallback, env knobs, thread-
# local overrides) — one definition of the format and the driver, no drift.
[package]
name = "openmodelica_sim_meta"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
# Host builds enable `std` (native + the wasm32 web omc, both have std). The
# in-wasm runtime builds `no_std` (`default-features = false`), where the solver
# math routes through `libm` and daskr is `no_std` too.
std = ["daskr/std"]

[dependencies]
# The DAE solver for the DASSL driver. no_std-capable; the host pulls its `std`
# feature via this crate's `std`.
daskr = { path = "../daskr", default-features = false }
# no_std `sqrt` for the colored-FD Jacobian; unused under `std` (inherent method).
libm = "0.2"

[lib]
